fix: README fix: css to adjust size in vh, some text was unreachable fix: make dancers behind the user to make a surprise

--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ body {
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
-  height: 100vh;
+  height: 90vh;
   transition: top 0.3s ease;
   z-index: 20;
   border-radius: 20px;
@@ -226,7 +226,8 @@ body {
 }
 
 .organ-title {
-  margin: 0;
+  left: 50%;
+  top: 50%;
   font-size: 12px;
   color: #333;
   text-align: center;
@@ -322,6 +323,7 @@ body {
     transition: background-color 0.3s ease;
     font-size: 1em;
     user-select: none;
+    padding: 5px 10px;
   }
 
   .toggle-mode-btn:hover {
@@ -364,14 +366,14 @@ body {
     background: rgba(255, 255, 255, 0.1);
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
-    height: 100vh;
+    height: 90vh;
     transition: top 0.1 ease;
     z-index: 20;
     border-radius: 20px;
   }
 
   .sidebar-open {
-    top: 10%;
+    top: 10vh;
   }
 
   .sidebar-closed {
@@ -382,10 +384,5 @@ body {
   .subcategory-title,
   .part-button {
     font-size: 12px;
-  }
-
-  .organ-info {
-    width: 100%;
-    right: inherit;
   }
 }
